Nytt diagram plus text

--- a/integrationen_i_dalarna.Rmd
+++ b/integrationen_i_dalarna.Rmd
@@ -99,9 +99,16 @@ Den strukturella integrationen handlar om skyldigheter och rättigheter via samh
 
 Begreppet integration kan således ses som *en process där individer eller grupper med olika bakgrunder och förutsättningar blir en del av ett större socialt, ekonomiskt eller kulturellt sammanhang, samtidigt som deras egen identitet och särart respekteras*.
 
-Även om integrationsfrågan är bredare, präglas samhällsdebatten av integration av utrikes födda i det svenska samhället. Det gör att det är viktigt att belysa hur utrikes födda förhåller sig till inrikes födda inom ett antal samhällsområden. Samhällets förmåga att intregrera utrikes födda i utbildning, arbetsmarknad eller boende är avgörande för t ex kompetensförsörjningen på kort och lång sikt. Andelen utrikes födda i arbetsför ålder har ökat successivt över de senaste 20 åren och är i dag en förutsättning för att kompetensförsörja arbetsmarknaden.
+Även om integrationsfrågan är bredare, präglas samhällsdebatten av integration av utrikes födda i det svenska samhället. Det gör att det är viktigt att belysa hur utrikes födda förhåller sig till inrikes födda inom ett antal samhällsområden. Samhällets förmåga att intregrera utrikes födda i utbildning, arbetsmarknad eller boende är avgörande för t ex kompetensförsörjningen på kort och lång sikt. Antalet utrikes födda i arbetsför ålder har ökat successivt över de senaste 20 åren, från `r antal_utrikes_forsta_ar` personer år `r antal_utrikes_inrikes_min_ar` till `r antal_utrikes_max_ar` år `r antal_utrikes_inrikes_max_ar`, en ökning med `r antal_utrikes_skillnad` personer. Under samma tidsperiod har antalet inrikes födda i arbetsför ålder minskat med `r antal_inrikes_skillnad` personer, från `r antal_inrikes_forsta_ar` personer till `r antal_inrikes_max_ar` personer. Utrikes födda har därför varit en förutsättning för att kunna kompetensförsörja arbetsmarknaden. Sammantaget har dock det totala antalet personer i arbetsför ålder minskat i Dalarna sedan `r antal_utrikes_inrikes_min_ar`, vilket är en utmaning för länets arbetsmarknad.
 
 <span class = "kommentar">*Lägg in Diagram 2 från Kompetensförsörjningsrapporten - andelar inrikes/utrikes födda i arbetsför ålder*</span>
+
+```{r, echo = FALSE, message = FALSE, warning = FALSE, fig.height=5, fig.width=8, fig.align='center'}
+
+gg_antal_utrikes_inrikes$befolkning_utr_inr_Dalarna
+
+```
+
 
 2019 publicerade Region Dalarna rapporten [*Nulägesbeskrivning av integrationen i Dalarna, ett regionalt perspektiv*](https://www.regiondalarna.se/contentassets/d845727dbc9f49c3b7b09a2c60456497/integrationsanalys.pdf){target="_blank"}.^[Region Dalarna. Nulägesbeskrivning av integrationen i Dalarna, ett regionalt perspektiv. Regionala utvecklingsförvaltningens rapportserie #1, 2019.] Rapporten skrevs i en period där Sverige och Dalarna några år tidigare hade haft den största volymen av asylinvandring i historien. Därefter har asylinvandringen minskat och 2024 var den på en nivå som är den lägsta sedan 1985, vilket är en del i ett paradigmskifte från sittande regering att öka arbetskraftsinvandringen och minska asylinvandringen [(Regeringen, 2025)](https://www.regeringen.se/pressmeddelanden/2025/01/pressbriefing-om-migrationen-till-sverige-under-2024/){target="_blank"}.^[Regeringen. Pressbriefing om migrationen till Sverige under 2024. 2025-01-10.]
 
@@ -396,7 +403,7 @@ När vistelsetid tas med i analysen syns samma mönster som i <span class = "kom
 
 Bland utrikes födda har män en högre sysselsättningsgrad än kvinnor när vistelsetiden är lägre än 10 år, innan kvinnorna får en något högre sysselsättningsgrad än männen. Bland inrikes födda är sysselsättningsgraden något högre för män än för kvinnor.
 
-Skillnaderna mellan könen minskar som synes med vistelsetiden i Sverige. Emma Neuman (2015) har undersökt hur kulturella normer bidrar till arbetsmarknadsutfall mellan utrikes födda kvinnor och män i Sverige. Hennes kartläggning visade att de som invandrat från länder där arbetsdeltagandet för kvinnor var lägre än män, också hade stora skillnader i andelen sysselsatta per kön på den svenska arbetsmarknaden. Efter en längre vistelsetid i Sverige, minskade gapet och skillnaden i sysselsättningsgrad mellan könen närmar sig nivån för inrikes födda. Slutsatsen som drogs var att den kulturella inverkan som ansågs finnas avtar med tiden. Mönstret med en stor skillnad i sysselsättningsgrad mellan kön för utrikes födda med en kort vistelsetid går att se även i Dalarna. Skillnaden mellan könen minskar ju längre vistelsetiden i landet blir, och har helt försvunnit för de som bott i Sverige i 10 år eller mer. <span class="kommentar">Nyare källa? Neuman Emma (2015) Essays on Segregation, Gender Economics, and Self-employment. Avhandling. Växjö: Linnéuniversitetet</span>
+Skillnaderna mellan könen minskar som synes med vistelsetiden i Sverige. Emma Neuman (2015)^[Neuman Emma (2015) Essays on Segregation, Gender Economics, and Self-employment.] har undersökt hur kulturella normer bidrar till arbetsmarknadsutfall mellan utrikes födda kvinnor och män i Sverige. Hennes kartläggning visade att de som invandrat från länder där arbetsdeltagandet för kvinnor var lägre än män, också hade stora skillnader i andelen sysselsatta per kön på den svenska arbetsmarknaden. Efter en längre vistelsetid i Sverige, minskade gapet och skillnaden i sysselsättningsgrad mellan könen närmar sig nivån för inrikes födda. Slutsatsen som drogs var att den kulturella inverkan som ansågs finnas avtar med tiden. Mönstret med en stor skillnad i sysselsättningsgrad mellan kön för utrikes födda med en kort vistelsetid går att se även i Dalarna. Skillnaden mellan könen minskar ju längre vistelsetiden i landet blir, och har helt försvunnit för de som bott i Sverige i 10 år eller mer.
 
 *Diagram - Genomsnittlig månadsinkomst förvärvsarbetande invånare 20-64 år i Dalarnas län*
 
