--- a/integrationen_i_dalarna.Rmd
+++ b/integrationen_i_dalarna.Rmd
@@ -99,13 +99,15 @@ Den strukturella integrationen handlar om skyldigheter och rättigheter via samh
 
 Begreppet integration kan således ses som *en process där individer eller grupper med olika bakgrunder och förutsättningar blir en del av ett större socialt, ekonomiskt eller kulturellt sammanhang, samtidigt som deras egen identitet och särart respekteras*.
 
-Även om integrationsfrågan är bredare, präglas samhällsdebatten av integration av utrikes födda i det svenska samhället. Det gör att det är viktigt att belysa hur utrikes födda förhåller sig till inrikes födda inom ett antal samhällsområden. Samhällets förmåga att intregrera utrikes födda i utbildning, arbetsmarknad eller boende är avgörande för t ex kompetensförsörjningen på kort och lång sikt. Antalet utrikes födda i arbetsför ålder har ökat successivt över de senaste 20 åren, från `r antal_utrikes_forsta_ar` personer år `r antal_utrikes_inrikes_min_ar` till `r antal_utrikes_max_ar` år `r antal_utrikes_inrikes_max_ar`, en ökning med `r antal_utrikes_skillnad` personer. Under samma tidsperiod har antalet inrikes födda i arbetsför ålder minskat med `r antal_inrikes_skillnad` personer, från `r antal_inrikes_forsta_ar` personer till `r antal_inrikes_max_ar` personer. Utrikes födda har därför varit en förutsättning för att kunna kompetensförsörja arbetsmarknaden. Sammantaget har dock det totala antalet personer i arbetsför ålder minskat i Dalarna sedan `r antal_utrikes_inrikes_min_ar`, vilket är en utmaning för länets arbetsmarknad.
+Även om integrationsfrågan är bredare, präglas samhällsdebatten av integration av utrikes födda i det svenska samhället. Det gör att det är viktigt att belysa hur utrikes födda förhåller sig till inrikes födda inom ett antal samhällsområden. Samhällets förmåga att intregrera utrikes födda i utbildning, arbetsmarknad eller boende är avgörande för t ex kompetensförsörjningen på kort och lång sikt. 
+
+Andelen utrikes födda som är i arbetsför ålder (20-64 år) i Dalarna har ökat successivt över de senaste 20 åren, från `r andel_utrikes_forsta_ar` procent år `r antal_utrikes_inrikes_min_ar` till `r andel_utrikes_max_ar` procent år `r andel_utrikes_inrikes_max_ar`. Ökningen var särskilt tydlig under några år på mitten av 2010-talet, när många invandrade till Sverige och Dalarna. Utrikes födda är därför en förutsättning för att kunna kompetensförsörja arbetsmarknaden. 
 
 <span class = "kommentar">*Lägg in Diagram 2 från Kompetensförsörjningsrapporten - andelar inrikes/utrikes födda i arbetsför ålder*</span>
 
 ```{r, echo = FALSE, message = FALSE, warning = FALSE, fig.height=5, fig.width=8, fig.align='center'}
 
-gg_antal_utrikes_inrikes$befolkning_utr_inr_Dalarna
+gg_andel_utrikes_inrikes$befolkning_utr_inr_andel_Dalarna
 
 ```
 
